Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 2.8.0-rc
-
None
-
Windows 7
Qt 4.8.4 (MSVC 2010)
Qt Creator 54ed620f35f19600195e9057cfcf5bc01573f396
-
cabef7580e9cf492b924c652859edb1c27bae002
Description
Launched Qt Creator and attempted to open a QBS project.
Creator crashes in VcsManager::findVersionControlForDirectory because it tries to dereference a null pointer; see vcsmanager.cpp:290 where 'curDocument' may be 0.
The project I opened is on a network share on a different drive letter. Possibly related?
Workaround: disable Version Control plugin tree.